// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventInfo should render contact info 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-b1kjk3-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-yzd260-MuiGrid2-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-ltaje5-MuiTypography-root"
      >
        entryTime
      </span>
      dateFormat.datespan
       
      <span
        class="info"
      />
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-true css-yu5d00-MuiGrid2-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-ltaje5-MuiTypography-root"
      >
        event.classPlaces
      </span>
      <div
        class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1o7apob-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1hltvp8-MuiTypography-root"
          >
            event.classPlacesHeader.name
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-gj1fbr-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1hltvp8-MuiTypography-root"
          >
            event.classPlacesHeader.dates
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-tx3obz-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1hltvp8-MuiTypography-root"
          >
            event.classPlacesHeader.entries
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-tx3obz-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1hltvp8-MuiTypography-root"
          >
            event.classPlacesHeader.places
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-tx3obz-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1hltvp8-MuiTypography-root"
          >
            event.classPlacesHeader.members
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-dr8jig-MuiGrid-root"
        >
          ALO
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1u5voze-MuiGrid-root"
        >
          eeeeee d.M.
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-83otcn-MuiGrid-root"
        >
          0
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-83otcn-MuiGrid-root"
        >
          10
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-83otcn-MuiGrid-root"
        >
          2
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-241rwc-MuiGrid2-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-ltaje5-MuiTypography-root"
      >
        event.judges
      </span>
      <div
        class="MuiBox-root css-0"
      >
        Tuomari 1
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1dgrg5x-MuiGrid2-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-ltaje5-MuiTypography-root"
      >
        event.official
      </span>
      official name, 0700-official, official@example.com
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-m9ba3e-MuiGrid2-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-ltaje5-MuiTypography-root"
      >
        event.secretary
      </span>
      secretary name, 0700-secretary, secretary@example.com
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1i1pohp-MuiGrid2-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-ltaje5-MuiTypography-root"
      >
        paymentDetails
      </span>
      123 €event.costMember 123 €
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1e29lse-MuiGrid2-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-ltaje5-MuiTypography-root"
      >
        event.priority
      </span>
      <div
        class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-13htn8f-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
        >
          Jäsenet
        </span>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-kjsw1z-MuiGrid2-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-ltaje5-MuiTypography-root"
      >
        event.description
      </span>
      event description text
    </div>
  </div>
</div>
`;

exports[`EventInfo should render event information 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-b1kjk3-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-yzd260-MuiGrid2-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-ltaje5-MuiTypography-root"
      >
        entryTime
      </span>
      dateFormat.datespan
       
      <span
        class="info"
      />
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-true css-yu5d00-MuiGrid2-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-ltaje5-MuiTypography-root"
      >
        event.classPlaces
      </span>
      <div
        class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1o7apob-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1hltvp8-MuiTypography-root"
          >
            event.classPlacesHeader.name
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-gj1fbr-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1hltvp8-MuiTypography-root"
          >
            event.classPlacesHeader.dates
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-tx3obz-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1hltvp8-MuiTypography-root"
          >
            event.classPlacesHeader.entries
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-tx3obz-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1hltvp8-MuiTypography-root"
          >
            event.classPlacesHeader.places
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-tx3obz-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1hltvp8-MuiTypography-root"
          >
            event.classPlacesHeader.members
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-dr8jig-MuiGrid-root"
        >
          ALO
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1u5voze-MuiGrid-root"
        >
          eeeeee d.M.
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-83otcn-MuiGrid-root"
        >
          0
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-83otcn-MuiGrid-root"
        >
          10
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-83otcn-MuiGrid-root"
        >
          2
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-241rwc-MuiGrid2-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-ltaje5-MuiTypography-root"
      >
        event.judges
      </span>
      <div
        class="MuiBox-root css-0"
      >
        Tuomari 1
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1dgrg5x-MuiGrid2-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-ltaje5-MuiTypography-root"
      >
        event.official
      </span>
      Teemu Toimitsija, 040-official, official@example.com
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-m9ba3e-MuiGrid2-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-ltaje5-MuiTypography-root"
      >
        event.secretary
      </span>
      Siiri Sihteeri, 040-secretary, secretary@example.com
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1i1pohp-MuiGrid2-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-ltaje5-MuiTypography-root"
      >
        paymentDetails
      </span>
      123 €event.costMember 123 €
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1e29lse-MuiGrid2-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-ltaje5-MuiTypography-root"
      >
        event.priority
      </span>
      <div
        class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-13htn8f-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
        >
          Jäsenet
        </span>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-kjsw1z-MuiGrid2-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-ltaje5-MuiTypography-root"
      >
        event.description
      </span>
      event description text
    </div>
  </div>
</div>
`;
